WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294273
ASAN_ILL crash in WebCore::LegacyRenderSVGShape::layout
https://bugs.webkit.org/show_bug.cgi?id=294273
Summary
ASAN_ILL crash in WebCore::LegacyRenderSVGShape::layout
p_choudhury
Reported
2025-06-10 11:25:47 PDT
rdar://152182457
Attachments
Add attachment
proposed patch, testcase, etc.
p_choudhury
Comment 1
2025-06-10 11:31:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46554
EWS
Comment 2
2025-06-11 11:52:25 PDT
Committed
296099@main
(d1bf7f2a3884): <
https://commits.webkit.org/296099@main
> Reviewed commits have been landed. Closing PR #46554 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug