ASAN_ILL crash in WebCore::LegacyRenderSVGShape::layout https://bugs.webkit.org/show_bug.cgi?id=294273 rdar://152182457

Reviewed by Said Abou-Hallawa.

Added checks for any invalid geometry Leading to NaN.

* LayoutTests/fast/svg/path-NaN-bounding-box-crash-expected.txt: Added.
* LayoutTests/fast/svg/path-NaN-bounding-box-crash.html: Added.
* Source/WebCore/rendering/svg/SVGRenderSupport.cpp:
(WebCore::SVGRenderSupport::calculateApproximateStrokeBoundingBox):
* Source/WebCore/rendering/svg/legacy/LegacyRenderSVGShape.cpp:
(WebCore::LegacyRenderSVGShape::calculateStrokeBoundingBox const):

Canonical link: https://commits.webkit.org/296099@main